--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,16 @@
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-
+        <style type="text/css">
+            .tp-bullets {
+                display: none;
+            }
+            header.stricky-fixed {
+                background: white;
+                border-bottom: 0;
+                /*border-color: #069;*/
+            }
+        </style>
  		<!--Start Top section-->
 		<header class="stricky anim-5-all stricky-fixed">
             <div class="container">
@@ -81,11 +90,6 @@
             </div>
         </header>
         <!--End Top section-->
-        <style type="text/css">
-            .tp-bullets {
-                display: none;
-            }
-        </style>
         <!-- #banner -->
         <section id="banner">
             <div class="banner-container">
@@ -109,7 +113,7 @@
                             data-x="0"
                             data-y="0"
                             >
-                                <h1>BY Powders Meet <br> <b>AAMA</b> Standards </h1>
+                                <h1>BY POWDERS <br> <b>Meet</b> <br> <b>AAMA</b> Standards </h1>
                                 <br>
                                 <a href="aama-standards.html" class="btn btn-lg btn-d">LEARN MORE</a>
                             </div>
@@ -147,7 +151,7 @@
                             data-slotamount="7">
 
                             <img
-                                src="img/slider/home3.png"
+                                src="img/slider/test.png"
                                 data-bgrepeat="no-repeat"
                                 data-bgfit="cover"
                                 data-bgposition="center center"
@@ -159,7 +163,7 @@
                             data-y="0"
                             >
                                 <h1><b>QUALITY CONTROL</b> <br>
-                                Is the Key to Success </h1>
+                                Is the Key <br> to <b>SUCCESS</b> </h1>
                                 <br>
                                 <a href="quality-control.html" class="btn btn-lg btn-d">LEARN MORE</a>
                             </div>
@@ -184,7 +188,7 @@
                             data-y="0"
                             >
                                 <h1><b>SERVICE</b> <br>
-                                will solve all <br>of your troubles</h1>
+                                Will Solve All <br>of Your Troubles</h1>
                                 <br>
                                 <a href="our-service-theory.html" class="btn btn-lg btn-d">LEARN MORE</a>
                             </div>
@@ -202,15 +206,15 @@
                 	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                     	<div class="welcome-attorney">
                         	<div class="section-title">
-								<h1><span>Welcome to Beyond Powder Coatings</span></h1>
+								<h1><span style="font-size: 20px;">Welcome to Beyond Powder Coatings</span></h1>
 							</div>
                             <div class="welcome-text">
-                                <p>We offer superior performance powder coatings for many industrial applications.
+                                <p><span style="font-size:20px;">W</span>e offer superior performance powder coatings for many industrial applications.
                                    Our high quality powder coatings are presented in a wide range of different technologies such as:
                                    Polyester TGIC, Polyester TGIC-Free, Epoxies, Polyester-Epoxy Hybrids, Polyurethane, Art Style, High Temperature Resistance, and Antimicrobial Coatings.
                                 </p>
                                 <p>
-                                We also provide many types of surface appearance finishes, including Smooth, Texture, Sand Texture, River Texture, Silk Texture, Marbling Texture, Metallic, and Hammer Tone etc.
+                                <span style="font-size:20px;">W</span>e also provide many types of surface appearance finishes, including Smooth, Texture, Sand Texture, River Texture, Silk Texture, Marbling Texture, Metallic, and Hammer Tone etc.
                                    We take a lot of pride in our product not only because of the superior quality but also the price and service that we offer.
                                    We treat customer needs as our first priority, your feedback is valuable and important to us. Beyond Powder Coatings truly appreciate the opportunity to serve our customers. </p>
 							</div>
@@ -233,7 +237,7 @@
                             <ul>
                                 <li>Architectural super-durable powder coatings</li>
                                 <li>Protective coatings</li>
-                                <li>High temperature resistance coatings</li>
+                                <li>High temperature coatings</li>
                             </ul>
                             <!-- <a href="">read more</a> -->
                         </div>
@@ -245,7 +249,7 @@
                             <ul>
                                 <li>Pipeline coatings</li>
                                 <li>Power-Tongs and other drilling equipment</li>
-                                <li>Chemical resistance powder coatings</li>
+                                <li>Chemical resistance coatings</li>
                             </ul>
                             <!-- <a href="">read more</a> -->
                         </div>
@@ -255,7 +259,7 @@
                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                         <div class="welcome-attorney">
                             <div class="welcome-text">
-                               <p>We are able to conduct a series of in-house powder coating performance testing which including but not limiting to accelerated corrosion and weathering test. This would insure the quality and durability of our powder coatings. We are committed to provide perfect matching to an existing product, to manufacture the exactly defined powder coating that our customer requires. We trade equality to our customers despite the company sizes; whether your need 500 kg a week or 40kg a month, Beyond Powder Coatings is always here to help. </p>
+                               <p><span style="font-size:20px;">W</span>e are able to conduct a series of in-house powder coating performance testing which including but not limiting to accelerated corrosion and weathering test. This would insure the quality and durability of our powder coatings. We are committed to provide perfect matching to an existing product, to manufacture the exactly defined powder coating that our customer requires. We trade equality to our customers despite the company sizes; whether your need 500 kg a week or 40kg a month, Beyond Powder Coatings is always here to help. </p>
                             </div>
                         </div>
                     </div>
@@ -312,10 +316,6 @@
                 </div>
             </div>
         </section>
-        <!--End Footer area-->
-
-
-
 
         <script src="js/vendor/jquery-1.11.3.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
