--- a/public/pantone_color.html
+++ b/public/pantone_color.html
@@ -23,7 +23,7 @@
         <![endif]-->
 
  		<!--Start Top section-->
-        <header class="stricky anim-5-all stricky-fixed" style="background: #069">
+        <header class="stricky anim-5-all stricky-fixed">
                 <div class="container">
                     <div class="logo pull-left">
                         <a href="index.html">
@@ -34,7 +34,16 @@
                         <div class="nav-holder">
                             <ul>
                                 <li><a href="index.html">HOME</a></li>
-                                <li><a href="about.html">ABOUT US</a></li>
+                                <li class="dropdown">
+                                    <a href="about.html">ABOUT US</a>
+                                    <ul>
+                                        <li><a href="about.html">Our Mission</a></li>
+                                        <li><a href="aama-standards.html">AAMA Standards</a></li>
+                                        <li><a href="color-matching.html">COLOR MATCHING</a></li>
+                                        <li><a href="quality-control.html">QUALITY CONTROL</a></li>
+                                        <li><a href="our-service-theory.html">OUR SERVICE THEORY</a></li>
+                                    </ul>
+                                </li>
                                 <li class="dropdown">
                                     <a href="products.html#polyester">PRODUCTS</a>
                                     <ul class="submenu">
@@ -48,10 +57,11 @@
                                     </ul>
                                 </li>
                                 <li class="dropdown">
-                                    <a href="ral_color.html">COLOR</a>
+                                    <a href="beyond-color.html">COLOR</a>
                                     <ul class="submenu">
-                                        <li><a href="ral_color.html">RAL Color</a></li>
-                                        <li><a href="pantone_color.html">Pantone Color</a></li>
+                                        <li><a href="beyond-color.html">BEYOND COLOR</a></li>
+                                        <li><a href="ral_color.html">RAL COLOR</a></li>
+                                        <li><a href="pantone_color.html">PANTONE COLOR</a></li>
                                     </ul>
                                 </li>
                                 <li><a href="contact.html">CONTACT US</a></li>
@@ -4741,10 +4751,10 @@
             </div>
         </section>
 
-          <section id="footer-area">
-            <div class="container">
+        <section id="footer-area">
+          <div class="container">
               <div class="row">
-                  <div class="col-lg-8 col-md-4 col-sm-6 col-xs-12">
+                  <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                         <div class="widget-social-links">
                             <a><i class="fa fa-facebook mysocial_style"></i></a>
                             <a><i class="fa fa-twitter mysocial_style"></i></a>
@@ -4755,7 +4765,7 @@
                           <p>Copyright © Legal Power 2015. All rights reserved. </p>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                         <div class="single-footer-widget">
                             <div class="widget-get-intouch">
                                 <ul>
