--- a/public/products.html
+++ b/public/products.html
@@ -27,7 +27,7 @@
         <![endif]-->
 
  		<!--Start Top section-->
-                <header class="stricky anim-5-all stricky-fixed" style="background: #069">
+                <header class="stricky anim-5-all stricky-fixed">
                     <div class="container">
                         <div class="logo pull-left">
                             <a href="index.html">
@@ -38,7 +38,16 @@
                             <div class="nav-holder">
                                 <ul>
                                     <li><a href="index.html">HOME</a></li>
-                                    <li><a href="about.html">ABOUT US</a></li>
+                                    <li class="dropdown">
+                                        <a href="about.html">ABOUT US</a>
+                                        <ul>
+                                            <li><a href="about.html">Our Mission</a></li>
+                                            <li><a href="aama-standards.html">AAMA Standards</a></li>
+                                            <li><a href="color-matching.html">COLOR MATCHING</a></li>
+                                            <li><a href="quality-control.html">QUALITY CONTROL</a></li>
+                                            <li><a href="our-service-theory.html">OUR SERVICE THEORY</a></li>
+                                        </ul>
+                                    </li>
                                     <li class="dropdown">
                                         <a href="products.html#polyester">PRODUCTS</a>
                                         <ul class="submenu">
@@ -52,10 +61,11 @@
                                         </ul>
                                     </li>
                                     <li class="dropdown">
-                                        <a href="ral_color.html">COLOR</a>
+                                        <a href="beyond-color.html">COLOR</a>
                                         <ul class="submenu">
-                                            <li><a href="ral_color.html">RAL Color</a></li>
-                                            <li><a href="pantone_color.html">Pantone Color</a></li>
+                                            <li><a href="beyond-color.html">BEYOND COLOR</a></li>
+                                            <li><a href="ral_color.html">RAL COLOR</a></li>
+                                            <li><a href="pantone_color.html">PANTONE COLOR</a></li>
                                         </ul>
                                     </li>
                                     <li><a href="contact.html">CONTACT US</a></li>
@@ -449,88 +459,29 @@
         </section>
         <!--End practice v5 area-->
 
-        <!--Start Footer widget area-->
-        <section id="footer-widget-area">
-        	<div class="container">
-            	<div class="row">
-                	<!--Start Single Footer widget-->
-                	<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-                    	<div class="single-footer-widget">
-                        	<div class="footer-logo">
-                            	<img src="img/footer-logo.png" alt="">
-                            </div>
-                            <div class="widget-text">
-                            	<p>Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed do eiusmod tempor incididunt ut labore et dolore magna ali qua. Ut enim ad veniam, quis no strud exercitation.</p>
-                            </div>
-
-                            <div class="footer-read-more">
-                            	<a href="">Read More <i class="fa fa-angle-right"></i><i class="fa fa-angle-right"></i></a>
-                            </div>
-                            <div class="widget-social-links">
-                            	<a href=""><i class="fa fa-facebook mysocial_style"></i></a>
-                                <a href=""><i class="fa fa-twitter mysocial_style"></i></a>
-                                <a href=""><i class="fa fa-google-plus mysocial_style"></i></a>
-                                <a href=""><i class="fa fa-linkedin mysocial_style"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <!--End Single Footer widget-->
-                    <!--Start Single Footer widget-->
-                	<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-                    	<div class="single-footer-widget">
-                        	<div class="quick-links">
-                            	<h3>Quick links</h3>
-                                <ul class="left-quick-links alignleft">
-                                	<li><i class="fa fa-angle-right"></i><a href="">Criminal Injury Law</a></li>
-                                    <li><i class="fa fa-angle-right"></i><a href="">Divorce Law</a></li>
-                                    <li><i class="fa fa-angle-right"></i><a href="">Industrial Law</a></li>
-                                    <li><i class="fa fa-angle-right"></i><a href="">Insurance Law</a></li>
-                                    <li><i class="fa fa-angle-right"></i><a href="">Family and Child Law</a></li>
-                                </ul>
-                                <ul>
-                                	<li><i class="fa fa-angle-right"></i><a href="">Criminal Injury Law</a></li>
-                                    <li><i class="fa fa-angle-right"></i><a href="">Divorce Law</a></li>
-                                    <li><i class="fa fa-angle-right"></i><a href="">Industrial Law</a></li>
-                                    <li><i class="fa fa-angle-right"></i><a href="">Insurance Law</a></li>
-                                    <li><i class="fa fa-angle-right"></i><a href="">Family and Child Law</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <!--End Single Footer widget-->
-                    <!--Start Single Footer widget-->
-                	<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-                    	<div class="single-footer-widget">
-                        	<div class="widget-get-intouch">
-                            	<h3>Get in Touch</h3>
-                            	<ul>
-                                	<li class="location">Lorance Road 542B, Tailstoi Town 5248 MT, Wordwide Country</li>
-                                    <li class="phone">01865 524 8503</li>
-                                    <li class="envelop">contact@legalpower.com</li>
-                                    <li class="website">http://legalpower.com</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <!--End Single Footer widget-->
-
-                </div>
-            </div>
-        </section>
-        <!--End Footer widget area-->
-
         <!--Start Footer area-->
         <section id="footer-area">
-        	<div class="container">
-            	<div class="row">
-                	<div class="col-lg-5">
-                    	<div class="copy-right-text">
-                        	<p>Copyright © Legal Power 2015. All rights reserved. </p>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                        <div class="widget-social-links">
+                            <a><i class="fa fa-facebook mysocial_style"></i></a>
+                            <a><i class="fa fa-twitter mysocial_style"></i></a>
+                            <a><i class="fa fa-google-plus mysocial_style"></i></a>
+                            <a><i class="fa fa-linkedin mysocial_style"></i></a>
+                        </div>
+                        <div class="copy-right-text">
+                            <p>Copyright © Legal Power 2015. All rights reserved. </p>
                         </div>
                     </div>
-                    <div class="col-lg-2 col-lg-offset-5">
-                        <div class="created-text">
-                            <p>Created by: <a href="">DesignArc</a></p>
+                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                        <div class="single-footer-widget">
+                            <div class="widget-get-intouch">
+                                <ul>
+                                    <li class="phone">+1 780-243-6277</li>
+                                    <li class="envelop">bpowdercoatings@gmail.com</li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
