--- a/public/ral_color.html
+++ b/public/ral_color.html
@@ -26,7 +26,7 @@
         <![endif]-->
 
         <!--Start Top section-->
-                <header class="stricky anim-5-all stricky-fixed" style="background: #069">
+                <header class="stricky anim-5-all stricky-fixed">
                     <div class="container">
                         <div class="logo pull-left">
                             <a href="index.html">
@@ -37,7 +37,16 @@
                             <div class="nav-holder">
                                 <ul>
                                     <li><a href="index.html">HOME</a></li>
-                                    <li><a href="about.html">ABOUT US</a></li>
+                                    <li class="dropdown">
+                                        <a href="about.html">ABOUT US</a>
+                                        <ul>
+                                            <li><a href="about.html">Our Mission</a></li>
+                                            <li><a href="aama-standards.html">AAMA Standards</a></li>
+                                            <li><a href="color-matching.html">COLOR MATCHING</a></li>
+                                            <li><a href="quality-control.html">QUALITY CONTROL</a></li>
+                                            <li><a href="our-service-theory.html">OUR SERVICE THEORY</a></li>
+                                        </ul>
+                                    </li>
                                     <li class="dropdown">
                                         <a href="products.html#polyester">PRODUCTS</a>
                                         <ul class="submenu">
@@ -51,10 +60,11 @@
                                         </ul>
                                     </li>
                                     <li class="dropdown">
-                                        <a href="ral_color.html">COLOR</a>
+                                        <a href="beyond-color.html">COLOR</a>
                                         <ul class="submenu">
-                                            <li><a href="ral_color.html">RAL Color</a></li>
-                                            <li><a href="pantone_color.html">Pantone Color</a></li>
+                                            <li><a href="beyond-color.html">BEYOND COLOR</a></li>
+                                            <li><a href="ral_color.html">RAL COLOR</a></li>
+                                            <li><a href="pantone_color.html">PANTONE COLOR</a></li>
                                         </ul>
                                     </li>
                                     <li><a href="contact.html">CONTACT US</a></li>
@@ -1805,7 +1815,7 @@
         <section id="footer-area">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-8 col-md-4 col-sm-6 col-xs-12">
+                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                         <div class="widget-social-links">
                             <a><i class="fa fa-facebook mysocial_style"></i></a>
                             <a><i class="fa fa-twitter mysocial_style"></i></a>
@@ -1813,10 +1823,10 @@
                             <a><i class="fa fa-linkedin mysocial_style"></i></a>
                         </div>
                         <div class="copy-right-text">
-                            <p class="text-left">Copyright © Legal Power 2015. All rights reserved. </p>
+                            <p>Copyright © Legal Power 2015. All rights reserved. </p>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                         <div class="single-footer-widget">
                             <div class="widget-get-intouch">
                                 <ul>
