--- a/public/contact.html
+++ b/public/contact.html
@@ -33,62 +33,63 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <header class="stricky anim-5-all stricky-fixed">
-            <div class="container">
-                <div class="logo pull-left">
-                    <a href="index.html">
-                        <img src="img/logo.png" alt="Logo image">
-                    </a>
-                </div>
-                <nav class="mainmenu pull-right">
-                    <div class="nav-holder">
-                        <ul>
-                            <li><a href="index.html">HOME</a></li>
-                            <li class="dropdown">
-                                <a href="about.html">ABOUT US</a>
+                <header class="stricky anim-5-all stricky-fixed">
+                    <div class="container">
+                        <div class="logo pull-left">
+                            <a href="index.html">
+                                <img src="img/logo.png" alt="Logo image">
+                            </a>
+                        </div>
+                        <nav class="mainmenu pull-right">
+                            <div class="nav-holder">
                                 <ul>
-                                    <li><a href="about.html">Our Mission</a></li>
-                                    <li><a href="aama-standards.html">AAMA Standards</a></li>
-                                    <li><a href="about.html">Our Mission</a></li>
-                                    <li><a href="about.html">Our Mission</a></li>
-                                    <li><a href="about.html">Our Mission</a></li>
+                                    <li><a href="index.html">HOME</a></li>
+                                    <li class="dropdown">
+                                        <a href="about.html">ABOUT US</a>
+                                        <ul>
+                                            <li><a href="about.html">Our Mission</a></li>
+                                            <li><a href="aama-standards.html">AAMA Standards</a></li>
+                                            <li><a href="color-matching.html">COLOR MATCHING</a></li>
+                                            <li><a href="quality-control.html">QUALITY CONTROL</a></li>
+                                            <li><a href="our-service-theory.html">OUR SERVICE THEORY</a></li>
+                                        </ul>
+                                    </li>
+                                    <li class="dropdown">
+                                        <a href="products.html#polyester">PRODUCTS</a>
+                                        <ul class="submenu">
+                                            <li><a href="products.html#polyester">Polyester</a></li>
+                                            <li><a href="products.html#epoxies">Epoxies</a></li>
+                                            <li><a href="products.html#polyester-epoxy-hybrids">Polyester-Eposy Hybrids</a></li>
+                                            <li><a href="products.html#polyurethane">Polyurethane</a></li>
+                                            <li><a href="products.html#art-style">Art Style</a></li>
+                                            <li><a href="products.html#high-temperature-resistance">High Temperature Resistance</a></li>
+                                            <li><a href="products.html#antimicrobial">Antimicrobial</a></li>
+                                        </ul>
+                                    </li>
+                                    <li class="dropdown">
+                                        <a href="beyond-color.html">COLOR</a>
+                                        <ul class="submenu">
+                                            <li><a href="beyond-color.html">BEYOND COLOR</a></li>
+                                            <li><a href="ral_color.html">RAL COLOR</a></li>
+                                            <li><a href="pantone_color.html">PANTONE COLOR</a></li>
+                                        </ul>
+                                    </li>
+                                    <li><a href="contact.html">CONTACT US</a></li>
                                 </ul>
-                            </li>
-                            <li class="dropdown">
-                                <a href="products.html#polyester">PRODUCTS</a>
-                                <ul class="submenu">
-                                    <li><a href="products.html#polyester">Polyester</a></li>
-                                    <li><a href="products.html#epoxies">Epoxies</a></li>
-                                    <li><a href="products.html#polyester-epoxy-hybrids">Polyester-Eposy Hybrids</a></li>
-                                    <li><a href="products.html#polyurethane">Polyurethane</a></li>
-                                    <li><a href="products.html#art-style">Art Style</a></li>
-                                    <li><a href="products.html#high-temperature-resistance">High Temperature Resistance</a></li>
-                                    <li><a href="products.html#antimicrobial">Antimicrobial</a></li>
+                            </div>
+                            <div class="nav-expander">
+                                <ul>
+                                    <li><button class="nav-collapser"><i class="fa fa-bars"></i></button></li>
+                                    <li><button class="header-search-toggler"><i class="icon icon-Search"></i></button></li>
                                 </ul>
-                            </li>
-                            <li class="dropdown">
-                                <a href="ral_color.html">COLOR</a>
-                                <ul class="submenu">
-                                    <li><a href="ral_color.html">RAL Color</a></li>
-                                    <li><a href="pantone_color.html">Pantone Color</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="contact.html">CONTACT US</a></li>
-                        </ul>
+                            </div>
+                        </nav>
+                        <div class="search-box">
+                            <input type="text" placeholder="Search Here...">
+                            <button type="submit"><i class="icon icon-Search"></i></button>
+                        </div>
                     </div>
-                    <div class="nav-expander">
-                        <ul>
-                            <li><button class="nav-collapser"><i class="fa fa-bars"></i></button></li>
-                            <li><button class="header-search-toggler"><i class="icon icon-Search"></i></button></li>
-                        </ul>
-                    </div>
-                </nav>
-                <div class="search-box">
-                    <input type="text" placeholder="Search Here...">
-                    <button type="submit"><i class="icon icon-Search"></i></button>
-                </div>
-            </div>
-        </header>
+                </header>
         <!--End Top section-->
 
 		<!--Start contact area-->
@@ -140,110 +141,29 @@
         </section> -->
         <!--End map area-->
 
-        <!--Start legal problem area-->
-        <section id="legal-problem-area" class="anim-5-all">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12">
-                        <div class="legal-problem-text">
-                            <h2>If you have any legal problem in your life ... We are available</h2>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
-                        <div class="get-free-consultation-button">
-                            <a href="">free consultation <i class="fa fa-arrow-right"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!--End legal problem area-->
-
-        <!--Start Footer widget area-->
-        <section id="footer-widget-area">
-        	<div class="container">
-            	<div class="row">
-                	<!--Start Single Footer widget-->
-                	<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-                    	<div class="single-footer-widget">
-                        	<div class="footer-logo">
-                            	<img src="img/footer-logo.png" alt="">
-                            </div>
-                            <div class="widget-text">
-                            	<p>Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed do eiusmod tempor incididunt ut labore et dolore magna ali qua. Ut enim ad veniam, quis no strud exercitation.</p>
-                            </div>
-
-                            <div class="footer-read-more">
-                            	<a href="">Read More <i class="fa fa-angle-right"></i><i class="fa fa-angle-right"></i></a>
-                            </div>
-                            <div class="widget-social-links">
-                            	<a href=""><i class="fa fa-facebook mysocial_style"></i></a>
-                                <a href=""><i class="fa fa-twitter mysocial_style"></i></a>
-                                <a href=""><i class="fa fa-google-plus mysocial_style"></i></a>
-                                <a href=""><i class="fa fa-linkedin mysocial_style"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <!--End Single Footer widget-->
-                    <!--Start Single Footer widget-->
-                	<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-                    	<div class="single-footer-widget">
-                        	<div class="quick-links">
-                            	<h3>Quick links</h3>
-                                <ul class="left-quick-links alignleft">
-                                	<li><i class="fa fa-angle-right"></i><a href="">Criminal Injury Law</a></li>
-                                    <li><i class="fa fa-angle-right"></i><a href="">Divorce Law</a></li>
-                                    <li><i class="fa fa-angle-right"></i><a href="">Industrial Law</a></li>
-                                    <li><i class="fa fa-angle-right"></i><a href="">Insurance Law</a></li>
-                                    <li><i class="fa fa-angle-right"></i><a href="">Family and Child Law</a></li>
-                                </ul>
-                                <ul>
-                                	<li><i class="fa fa-angle-right"></i><a href="">Criminal Injury Law</a></li>
-                                    <li><i class="fa fa-angle-right"></i><a href="">Divorce Law</a></li>
-                                    <li><i class="fa fa-angle-right"></i><a href="">Industrial Law</a></li>
-                                    <li><i class="fa fa-angle-right"></i><a href="">Insurance Law</a></li>
-                                    <li><i class="fa fa-angle-right"></i><a href="">Family and Child Law</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <!--End Single Footer widget-->
-                    <!--Start Single Footer widget-->
-            	   <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-                        <div class="single-footer-widget">
-                            <div class="widget-get-intouch">
-                                <h3>Get in Touch</h3>
-                                <ul>
-                                    <li class="location">
-                                        5421 McLuhan End NW,
-                                        Edmonton AB, Canada, T6R 0P8
-                                    </li>
-                                    <li class="phone">+1 780-243-6277</li>
-                                    <li class="envelop">bpowdercoatings@gmail.com</li>
-                                    <li class="website">www.bypowder.com</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <!--End Single Footer widget-->
-
-                </div>
-            </div>
-        </section>
-        <!--End Footer widget area-->
-
         <!--Start Footer area-->
         <section id="footer-area">
-        	<div class="container">
-            	<div class="row">
-                	<div class="col-lg-5">
-                    	<div class="copy-right-text">
-                        	<p>Copyright © Legal Power 2015. All rights reserved. </p>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                        <div class="widget-social-links">
+                            <a><i class="fa fa-facebook mysocial_style"></i></a>
+                            <a><i class="fa fa-twitter mysocial_style"></i></a>
+                            <a><i class="fa fa-google-plus mysocial_style"></i></a>
+                            <a><i class="fa fa-linkedin mysocial_style"></i></a>
+                        </div>
+                        <div class="copy-right-text">
+                            <p>Copyright © Legal Power 2015. All rights reserved. </p>
                         </div>
                     </div>
-                    <div class="col-lg-2 col-lg-offset-5">
-                        <div class="created-text">
-                            <p>Created by: <a href="">DesignArc</a></p>
+                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                        <div class="single-footer-widget">
+                            <div class="widget-get-intouch">
+                                <ul>
+                                    <li class="phone">+1 780-243-6277</li>
+                                    <li class="envelop">bpowdercoatings@gmail.com</li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
