--- a/public/our-service-theory.html
+++ b/public/our-service-theory.html
@@ -26,53 +26,63 @@
 
 
  		<!--Start Top section-->
-<header class="stricky anim-5-all stricky-fixed" style="background: #069">
-            <div class="container">
-                <div class="logo pull-left">
-                    <a href="index.html">
-                        <img src="img/logo.png" alt="Logo image">
-                    </a>
-                </div>
-                <nav class="mainmenu pull-right">
-                    <div class="nav-holder">
-                        <ul>
-                            <li><a href="index.html">HOME</a></li>
-                            <li><a href="about.html">ABOUT US</a></li>
-                            <li class="dropdown">
-                                <a href="products.html#polyester">PRODUCTS</a>
-                                <ul class="submenu">
-                                    <li><a href="products.html#polyester">Polyester</a></li>
-                                    <li><a href="products.html#epoxies">Epoxies</a></li>
-                                    <li><a href="products.html#polyester-epoxy-hybrids">Polyester-Eposy Hybrids</a></li>
-                                    <li><a href="products.html#polyurethane">Polyurethane</a></li>
-                                    <li><a href="products.html#art-style">Art Style</a></li>
-                                    <li><a href="products.html#high-temperature-resistance">High Temperature Resistance</a></li>
-                                    <li><a href="products.html#antimicrobial">Antimicrobial</a></li>
+                <header class="stricky anim-5-all stricky-fixed">
+                    <div class="container">
+                        <div class="logo pull-left">
+                            <a href="index.html">
+                                <img src="img/logo.png" alt="Logo image">
+                            </a>
+                        </div>
+                        <nav class="mainmenu pull-right">
+                            <div class="nav-holder">
+                                <ul>
+                                    <li><a href="index.html">HOME</a></li>
+                                    <li class="dropdown">
+                                        <a href="about.html">ABOUT US</a>
+                                        <ul>
+                                            <li><a href="about.html">Our Mission</a></li>
+                                            <li><a href="aama-standards.html">AAMA Standards</a></li>
+                                            <li><a href="color-matching.html">COLOR MATCHING</a></li>
+                                            <li><a href="quality-control.html">QUALITY CONTROL</a></li>
+                                            <li><a href="our-service-theory.html">OUR SERVICE THEORY</a></li>
+                                        </ul>
+                                    </li>
+                                    <li class="dropdown">
+                                        <a href="products.html#polyester">PRODUCTS</a>
+                                        <ul class="submenu">
+                                            <li><a href="products.html#polyester">Polyester</a></li>
+                                            <li><a href="products.html#epoxies">Epoxies</a></li>
+                                            <li><a href="products.html#polyester-epoxy-hybrids">Polyester-Eposy Hybrids</a></li>
+                                            <li><a href="products.html#polyurethane">Polyurethane</a></li>
+                                            <li><a href="products.html#art-style">Art Style</a></li>
+                                            <li><a href="products.html#high-temperature-resistance">High Temperature Resistance</a></li>
+                                            <li><a href="products.html#antimicrobial">Antimicrobial</a></li>
+                                        </ul>
+                                    </li>
+                                    <li class="dropdown">
+                                        <a href="beyond-color.html">COLOR</a>
+                                        <ul class="submenu">
+                                            <li><a href="beyond-color.html">BEYOND COLOR</a></li>
+                                            <li><a href="ral_color.html">RAL COLOR</a></li>
+                                            <li><a href="pantone_color.html">PANTONE COLOR</a></li>
+                                        </ul>
+                                    </li>
+                                    <li><a href="contact.html">CONTACT US</a></li>
                                 </ul>
-                            </li>
-                            <li class="dropdown">
-                                <a href="ral_color.html">COLOR</a>
-                                <ul class="submenu">
-                                    <li><a href="ral_color.html">RAL Color</a></li>
-                                    <li><a href="pantone_color.html">Pantone Color</a></li>
+                            </div>
+                            <div class="nav-expander">
+                                <ul>
+                                    <li><button class="nav-collapser"><i class="fa fa-bars"></i></button></li>
+                                    <li><button class="header-search-toggler"><i class="icon icon-Search"></i></button></li>
                                 </ul>
-                            </li>
-                            <li><a href="contact.html">CONTACT US</a></li>
-                        </ul>
+                            </div>
+                        </nav>
+                        <div class="search-box">
+                            <input type="text" placeholder="Search Here...">
+                            <button type="submit"><i class="icon icon-Search"></i></button>
+                        </div>
                     </div>
-                    <div class="nav-expander">
-                        <ul>
-                            <li><button class="nav-collapser"><i class="fa fa-bars"></i></button></li>
-                            <li><button class="header-search-toggler"><i class="icon icon-Search"></i></button></li>
-                        </ul>
-                    </div>
-                </nav>
-                <div class="search-box">
-                    <input type="text" placeholder="Search Here...">
-                    <button type="submit"><i class="icon icon-Search"></i></button>
-                </div>
-            </div>
-        </header>
+                </header>
 
         <section id="mission-vision-area">
         	<div class="container">
