home page finalized?

--- a/public/index.html
+++ b/public/index.html
@@ -151,7 +151,7 @@
                             data-slotamount="7">
 
                             <img
-                                src="img/slider/test.png"
+                                src="img/slider/home3.jpg"
                                 data-bgrepeat="no-repeat"
                                 data-bgfit="cover"
                                 data-bgposition="center center"
