--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Legal Power || Responsive Law Firm Template</title>
+        <title>Beyond Powder Coatings</title>
         <meta name="description" content="">
         <!-- favicon icon -->
         <link rel="icon" type="image/png" href="img/favicon.png" />
@@ -36,7 +36,7 @@
             <div class="container">
                 <div class="logo pull-left">
                     <a href="index.html">
-                        <img src="img/logo.png" alt="Logo image">
+                        <img src="img/logo2.png" alt="Logo image">
                     </a>
                 </div>
                 <nav class="mainmenu pull-right">
