--- a/public/quality-control.html
+++ b/public/quality-control.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Legal Power || Responsive Law Firm Template</title>
+        <title>Beyond Powder Coatings</title>
         <meta name="description" content="">
         <!-- favicon icon -->
         <link rel="icon" type="image/png" href="img/favicon.png" />
@@ -87,12 +87,7 @@
         <section id="mission-vision-area">
         	<div class="container">
             	<div class="row">
-                	<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
-                    	<div class="mission-vision-left-img">
-                        	<!-- <img src="img/aboutus/1.png" alt=""> -->
-                        </div>
-                    </div>
-                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                    <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
                     	<div class="mission-vision-text">
                         	<div class="section-title">
                         		<h2><span>QUALITY CONTROL</span></h2>
@@ -100,6 +95,38 @@
                             <p>
                                 Quality Control is the key to build our successful business. We are strived to manufacture products that meet or exceed customers’ expectations. Our Production Process Control System allow us to minimize waste and operate at high levels of productivity.
                             </p>
+                            <table class="flow-table" border="1">
+                                <tr>
+                                    <th>Process Control Description</th>
+                                    <th>Form Templates</th>
+                                </tr>
+                                <tr>
+                                    <td class="col-md-8">
+                                        <ol type="a">
+                                            <li>Salesman will generate <span class="text-highlight">Production Order</span> according to <span class="text-highlight">Sales Contract</span>, production planner will generate <span class="text-highlight">Production</li>
+                                            <li>Plan & Follow Up Plan</li> according to <span class="text-highlight">Production Order</span>.</li>
+                                            <li>Technical Department will generate <span class="text-highlight">Technical Flow Sheet</span> and <span class="text-highlight">Bill of Material</span> (BOM) according to <span class="text-highlight">Production Order</span>,</li>
+                                            <li>those documents will be sent to Production Department, Purchasing Department, and Finance Department accordingly.</li>
+                                            <li>Technical Department will send <span class="text-highlight">Color Sample</span> and <span class="text-highlight">Quality Requirement</span> to Production Department and QC Department.</li>
+                                            <li>Production Department will generate a full-time production scheduling in responsible for order's follow up and coordination.</li>
+                                        </ol>
+                                    </td>
+                                    <td class="col-md-4">
+                                        <ul>
+                                            <li>Production Order</li>
+                                            <li>Technical Flow Sheet</li>
+                                            <li>Bill of Material</li>
+                                            <li>Quality Requirement</li>
+                                            <li>Sales Contract</li>
+                                        </ul>
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                        <div class="mission-vision-right-img">
+                            <img src="img/aboutus/quality.png" alt="">
                         </div>
                     </div>
                 </div>
