--- a/public/about.html
+++ b/public/about.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Legal Power || Responsive Law Firm Template</title>
+        <title>Beyond Powder Coatings</title>
         <meta name="description" content="">
         <!-- favicon icon -->
         <link rel="icon" type="image/png" href="img/favicon.png" />
